--- a/tes3mp-plugin/Cargo.toml
+++ b/tes3mp-plugin/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
 name = "tes3mp-plugin"
+description = "Stubs for creating a TES3MP server plugin"
+homepage = "https://git.cijber.net/teamnwah/tes3mp-rs"
 version = "0.1.0"
 authors = ["eater <=@eater.me>"]
 edition = "2018"
-
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
