--- a/tes3mp-plugin/Cargo.toml
+++ b/tes3mp-plugin/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "tes3mp-plugin"
 description = "Stubs for creating a TES3MP server plugin"
+readme = "README.md"
+keywords = ["tes3mp", "morrowind"]
 homepage = "https://git.cijber.net/teamnwah/tes3mp-rs"
 version = "0.1.0"
 license = "AGPL-3.0-or-later"
